force-app/main/default/objects/sma__MAArcGISBatchPushLog__c/sma__MAArcGISBatchPushLog__c.object-meta.xml
<CustomObject>
    <label>MapAnything ArcGIS Batch Push Log</label>
    <nameField>
        <label>MapAnything ArcGIS Batch Push Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything ArcGIS Batch Push Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>