force-app/main/default/objects/sma__MAArcGISBatchPushLog__c/fields/sma__Log__c.field-meta.xml
<CustomField>
    <fullName>sma__Log__c</fullName>
    <label>Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>