force-app/main/default/objects/sma__MAArcGISBatchPushLog__c/fields/sma__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>sma__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>