force-app/main/default/objects/sma__MAArcGISBatchPushLog__c/fields/sma__Success__c.field-meta.xml
<CustomField>
    <fullName>sma__Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>