force-app/main/default/objects/sma__MAArcGISBatchPushLog__c/fields/sma__Time__c.field-meta.xml
<CustomField>
    <fullName>sma__Time__c</fullName>
    <label>Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>